# pbesa

./: .gitignore  LICENSE  README.md  fix_metadata.py  local_deploy.sh  pyproject.toml  setup.py
examples/remote/: remote_a.py  remote_b.py  remote_c.py
examples/scripts/: blockpoolcontroller.py  collaborative_team.py  delegator_team.py  dispatcher_team.py  getstart.py  linealcontroller.py  noblockpoolcontroller.py  remote.py  remote_agent.py  simple_dispatcher_team.py
pbesa/: __init.py__  __init__.py  ai_client.py  cognitive.py  mas.py  models.py  rational.py  text.py
pbesa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pbesa/celulas/: __init__.py  celula_casos.py  celula_consultas.py  celula_conversador.py  celula_corresponde.py  celula_cuestionador.py  celula_datos_identificables.py  celula_demanda.py  celula_diligencia.py  celula_evaluador.py  celula_expertos.py  celula_extraccion.py  celula_generar_caso.py  celula_generar_doc_advice.py  celula_generar_doc_caso.py  celula_generar_doc_fact.py  celula_generar_doc_goal.py  celula_generar_doc_test.py  celula_generar_documento.py  celula_instruccion.py  celula_marco.py  celula_parafraseo.py  celula_pertinencia.py  celula_preguntas.py  celula_respuesta.py  celula_saludos.py  celula_simulador_ciudadano.py  celula_verificar_calculos.py  common.py  data_extraction_cel.py  web.py
pbesa/engine/: __init__.py
pbesa/kernel/: util.py  world.py
pbesa/middleware/: __init__.py
pbesa/remote/: remote_adm.py
pbesa/scrape/: CrawlAction.py  CrawlData.py  SpiderAction.py  SpiderAgent.py  SpiderData.py  __init__.py  exceptions.py
pbesa/simulator/: __init__.py  dialog_simulator.py
pbesa/social/: __init__.py  collaborative_team.py  delegator.py  delegator_team.py  dialog.py  dispatcher_team.py  prompts.py  secuencial_team.py  sel_dispatcher_team.py  worker.py  (+3 more)
(+123 files in other folders)
