[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbesa"
version = "4.0.57"
description = "Plataforma para crear sistemas multiagentes racionales"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "PBESA Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymongo>=4.6.3",
    "requests>=2.32.3",
    "azure-ai-projects>=1.0.0b6",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.21.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "fuzzywuzzy>=0.18.0",
]

[tool.setuptools.packages.find]
where = ["."]


